added initial hero image component code

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,4 +4,5 @@
 // Global Styles
 @import './global';
 
-@import './components/App/App';
+@import '../components/App/App';
+@import '../components/HeroImage/HeroImage';
