updated component names

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,4 +5,4 @@
 @import './global';
 
 @import '../components/App/App';
-@import '../components/HeroImage/HeroImage';
+@import '../components/Photo/Photo';
