--- a/src/components/App/_App.scss
+++ b/src/components/App/_App.scss
@@ -1,3 +1,13 @@
 .app {
+    .searchBar {
+        margin: 20px;
 
+        input {
+            margin-right: 10px;
+        }
+    }
+
+    .photos {
+        padding-left: 20px;
+    }
 }
