--- a/src/components/Photo/_Photo.scss
+++ b/src/components/Photo/_Photo.scss
@@ -1,3 +1,11 @@
 .photo {
-    
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+    float: left;
+
+    img {
+        height: 150px;
+        width: 150px;
+    }
 }
